--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -28,5 +28,5 @@ jobs:
             - uses: JamesIves/github-pages-deploy-action@4.1.4
               if: always()
               with:
-                  branch: main # The branch the action should deploy to.
+                  branch: reports # The branch the action should deploy to.
                   folder: playwright-report # The folder the action should deploy.
