--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,5 +1,6 @@
 name: Playwright Tests
-on: workflow-dispatch
+on:
+    workflow-dispatch:
         push:
             branches: main
         pull_request:
