--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,10 +1,10 @@
 name: Playwright Tests
 on:
-    workflow-dispatch:
-        push:
-            branches: main
-        pull_request:
-            branches: main
+    push:
+        branches: main
+    pull_request:
+        branches: main
+    workflow-dispatch
 jobs:
     test:
         timeout-minutes: 60
