--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -8,7 +8,7 @@ on:
 jobs:
     test:
         timeout-minutes: 60
-        runs-on: ubuntu-latest
+        runs-on: mcr.microsoft.com/playwright:v1.23.1-focal
         steps:
             - uses: actions/checkout@v2
             - uses: actions/setup-node@v2
@@ -16,8 +16,8 @@ jobs:
                   node-version: '14.x'
             - name: Install dependencies
               run: npm ci
-            - name: Install Playwright Browsers
-              run: npx playwright install --with-deps
+            # - name: Install Playwright Browsers
+            #   run: npx playwright install --with-deps
             - name: Run Playwright tests
               run: npx playwright test
             - uses: actions/upload-artifact@v2
